# src/EagleBank.Application/Auth/Login/LoginResponse.cs
@@ -1,0 +1,3 @@
+namespace EagleBank.Application.Auth.Login;
+
+public sealed record LoginResponse(string Token);
